yaml-applications/dev-admin-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plannify-web-admin-app
  name: plannify-web-admin-app
  namespace: plannify-dev
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: plannify-web-admin-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: plannify-web-admin-app
    spec:
      containers:
        - image: ghcr.io/plannify-truck-driver-app/web-admin-app:0.0.1-dev.82
          name: plannify-web-admin-app
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "92m"
              memory: "256Mi"
            limits:
              cpu: "128m"
              memory: "512Mi"
          ports:
            - containerPort: 4173
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 4173
            initialDelaySeconds: 5
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: plannify-web-admin-app
  namespace: plannify-dev
spec:
  type: ClusterIP
  selector:
    app: plannify-web-admin-app
  ports:
    - port: 80
      targetPort: 4173
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plannify-web-admin-app
  namespace: plannify-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-plannify-dev
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/rewrite-target: /
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: admin-dev.plannify.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plannify-web-admin-app
                port:
                  number: 80
  tls:
    - hosts:
        - admin-dev.plannify.be
      secretName: dev-web-admin-app-plannify-be-tls
